syntax = "proto3";
package latlonpb;

service GeoLookup {
  rpc Lookup (LookupReq) returns (LookupResp) {}
}

message LookupReq {
  double lat = 1;
  double lon = 2;
}

message Location {
  string name = 1;
  double lat = 2;
  double lon = 3;
  double distance = 4;
}

message LookupResp {
  repeated Location location = 1;
}
